Bug fix when pressing bare tilbud screen jump

--- a/style.css
+++ b/style.css
@@ -416,7 +416,7 @@ padding-top: env(safe-area-inset-top);
 
 .title{
   margin: 0;
-  font-size: 30px;
+  font-size: 28px;
   font-weight: 500;
 }
 
